# locationd

./: CMakeLists.txt  ChangeLog  MAINTAINERS  snapcraft.yaml
data/: CMakeLists.txt  core.locationd.Service.conf  locationd-trust-stored.conf.in  locationd.conf.in
data/location/dbus/: a.h  provider.xml  service.xml  session.xml
debian/: changelog  control  control.in  gen-debian-files.sh  get-versions.sh  liblocationd-dev.install  liblocationd0.install  liblocationd4.install  liblocationd4.install.amd64  liblocationd4.install.with-gps  locationd-bin.dirs  locationd-bin.install  locationd-examples.install  rules
doc/: daemon_and_cli.md  tips_n_tricks.md
docs/: architecture.md  assistnow.md  configure-from-gadget.md  connect-serial-ports.md  faq.md  index.md  installation.md  locationd-client.py  metadata.yaml  obtain-location.md  release-notes.md  report-bug.md
docs/reference/: available-providers.md  commands.md  configuration.md  dbus-api.md
examples/: CMakeLists.txt
examples/standalone/connectivity/: CMakeLists.txt
prebuilt/meta/hooks/: configure
qt/: CMakeLists.txt  dbusdatatypes.h  plugin.json  qgeopositioninfosource_locationd.cpp  qgeopositioninfosource_locationd.h  qgeopositioninfosourcefactory_locationd.cpp  qgeopositioninfosourcefactory_locationd.h  test.cpp
src/location/: CMakeLists.txt  runtime_tests.cpp  system_configuration.cpp
src/location/cmds/: monitor.cpp  monitor.h  run.cpp  run.h
src/location/connectivity/: manager.cpp  ofono_nm_connectivity_manager.cpp  w11t_manager.cpp
src/location/dbus/: service.h
src/location/dbus/skeleton/: service.cpp  service.h  session.cpp  session.h
src/location/dbus/stub/: service.cpp  service.h  session.cpp  session.h
src/location/glib/: runtime.h
src/location/nmea/: grammar.h  sentence.cpp
src/location/providers/mls/: CMakeLists.txt  provider.cpp
src/location/providers/remote/: provider.cpp  provider.h
src/location/providers/sirf/: provider.cpp  reader.cpp  writer.cpp
src/location/providers/ubx/: provider.cpp
src/location/providers/ubx/_8/: receiver.cpp
tests/: CMakeLists.txt  acceptance_tests.cpp  remote_providerd_test.cpp
